--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="">email</a></li>
-	        		<li></li>
+<html>
+<head>
+	<title>{{ page.title }}</title>
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+	<style type="text/css">
+		body {
+			padding: 10px;
+		}
+
+		.side, .content {
+			padding: 10px;
+		}
+
+		.side {
+			background-color: #555;
+			color: white;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<div class="row">
+			<div class="col-3 side" style="border: 0px solid black;">
+				<h1>Jolo Balbin</h1>
+				<h6>AI Engineer / Consultant</h6>
+				<ul>
+					<li><i class="fab fa-linkedin"></i> Linkedin</li>
+					<li><i class="fab fa-github"></i> Github</li>
 				</ul>
-			</footer>
-		</body>
-	</html>
+			</div>
+			<div class="col content" style="border: 0px solid black;">
+				{{ content }}
+			</div>
+		</div>
+	</div>
+</body>
+</html>
