--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,15 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<article>
+    <h1>{{ page.title }}</h1>
+    <p class="meta"><sub>{{ page.date | date: "%B %-d, %Y" }}</sub></p>
 
-<div class="post">
-  {{ content }}
-</div>
+    <div class="post">
+      {{ content }}
+    </div>
+</article>
+
+<hr>
+
+Back to <a href="{{ site.url }}">home</a>.
