--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-3" style="border: 0px solid black;">
+			<div class="col-lg-3" style="border: 0px solid black;">
 				<div class="row">
 					<div class="col side">
 						<h1><a href="{{ site.url }}">Jolo Balbin</a></h1>
