--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
 				<div class="row">
 					<div class="col side">
 						<h1><a href="{{ site.url }}">Jolo Balbin</a></h1>
-						<h6>AI Engineer / Consultant</h6>
+						<h6>Software / AI Engineer</h6>
 						<ul>
 							<li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/jpbalbin/">Linkedin</a></li>
 							<li><i class="fab fa-github"></i> <a href="https://github.com/mojojolo">Github</a></li>
